added class and team info to home page

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
         <title>CSC 667 - Team 03</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
+        <center>
+            <h1>CSC 667 Section 2</h1>
+            <h2>Team 03</h2>
+            <h3>Brian, Jerry, Adan, Jay, Thanh</h3>
+            <a>Hello world!</a>
+        </center>
     </body>
 </html>
