--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
+        <link rel="stylesheet" href="https://getbootstrap.com/docs/4.3/dist/css/bootstrap.min.css">
         <title>CSC 667 - Team 03</title>
     </head>
     <body>
