--- a/public/message.html
+++ b/public/message.html
@@ -6,17 +6,30 @@
   <script type="text/javascript">
     function update()
 	{
-	  $.post("server.php", {}, function(data) {
-	  	$("#screen").val(data)
-	  });
+	  //scroll chat screen to the bottom
+	  var textarea = document.getElementById('chat');
+	  textarea.scrollTop = textarea.scrollHeight;
+	  
+	  $.post("./message.php", // create message-read.php for reading old messages only. separte code in message.php
+	    {message: $("#message").val()},
+	  	  function(data) { 
+	   	    //$("#chat").val(data); 
+		    //$("#message").val("");
+ 	  	  }
+	    );
 
+	 
+	  
+	  
+
+    	    
 	  setTimeout('update()', 1000);
 	}
 
 	$(document).ready(
  	  function() {
       	update();
- 
+        
      	$("#submit").click(    
           function() {         
        	    $.post("./message.php", 
@@ -28,6 +41,8 @@
     	    );
       	  }
      	);
+//------------------------------------------------
+
       });
   </script>
 
