--- a/public/inde2x.html
+++ b/public/inde2x.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="https://getbootstrap.com/docs/4.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./stylesheets/bootstrap.min.css">
   <title>CSC 667 - Team 03</title>
 </head>
 <body>
