--- a/public/base.html
+++ b/public/base.html
@@ -42,7 +42,7 @@
       <!-- Main Content -->
       <div id="main" class="col-7 h-100 px-4 py-2">
         <div id="header" class="container h-25 align-content-center justify-content-center">
-          <img src="https://via.placeholder.com/800x150" class="img-fluid mx-auto d-block h-75">
+          <img src="./src/800x150.png" class="img-fluid mx-auto d-block h-75">
             <div class="row align-content-center justify-content-center h-25 border">
               Game Lobby Number {{test}}
             </div>
